v1.3.0.53:
- fixed an error when exporting objects in Blender

v1.3.0.52:
- added the option to enable/disable the additional local project folder for the current user in the Prism Settings. This can override the setting in the project settings with the same name
- added support for the Nuke Indie fileextension (.nkind)
- removed a limitation in Blender that files needed to have a lower case extension to get imported (allows to import .OBJ files from ZBrush)
- Nuke autosave files are hidden in the Project Browser now

v1.3.0.51:
- fixed an error in Houdini which could happen when saving when no Prism project was set and some other rare cases
- fixed a problem that .mp4 files didn't show a preview in the Project Browser in most DCCs on Windows (requires updated dependencies. Use the installer from the website.)

v1.3.0.50:
- added a new environment variable to Houdini: "PRISM_ASSETPATH". Other than "PRISM_ASSET" it also includes the assetfolders
- fixed an error in Photoshop when the exportpath is longer than 255 characters on windows
- fixed a bug that Redshift proxies were not updated correctly in Houdini

v1.3.0.49:
- fixed an error when opening the existing task list in the Photoshop export dialog
- fixed an error when opening the Prism Settings window using PySide
- fixed an error in the "Select Task" dialog when changing the location dropdown
- fixed an error in the "Select Task" dialog when rightclicking in the empty area of the versions list

v1.3.0.48:
- improved the hook system. Hooks are now extended to all callbacknames which were previously only available for plugin. This adds dotzends of new possible hooks in the project folder inlcuding "preSaveScene" and "postSaveScene"
- added folders for Maya presets, shelves and icons to 00_Pipeline\CustomModules\Maya in Prism projects and added them to the environment variables: MAYA_PRESET_PATH, MAYA_SHELF_PATH, XBMLANGPATH
- added support for .PNG for the preview in the PRoject Browser